# django_ninja_csvgateway

./: .gitignore  Dockerfile  Pipfile  README.md  fly.example.toml  fly.toml  manage.py  pyproject.toml  requirements.txt  urls.py
django_ninja_csvgateway/: asgi.py  settings.py  urls.py  wsgi.py
django_ninja_demoapi/: asgi.py  settings.py  urls.py  wsgi.py
